# libMMU

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  configuration.rs  flake.nix  lib.rs  test.json
.github/workflows/: mdbook.yml  rust  rust-clippy.yml  rust.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/guide/: installation.md  usage.md
docs/src/misc/: contributors.md
src/: architecture.rs  config_struct.rs  configuration.rs  lib.rs  utils.rs
src/architecture/: generic.rs  riscv.rs
src/architectures/: generic.rs
src/utils/: configuration.rs
tests/: configuration.rs  test.toml  test.xml  test.yaml
tests/fixtures/: riscv-sample.toml
